--- a/web/templates/header.xhtml
+++ b/web/templates/header.xhtml
@@ -10,7 +10,7 @@
         <ui:component>
             <div class="header">
                 <h:graphicImage class="logo" library="img" name="logoJava.png"/>
-                GESTãO  -  PDV  
+                GESTãO  -  Ti  
                 <h:graphicImage class="logoPavani" library="img" name="logoPequena.png"/>
             </div>
         </ui:component>
