--- a/web/templates/leftbar.xhtml
+++ b/web/templates/leftbar.xhtml
@@ -36,10 +36,10 @@
                 <br/>
                 <hr/>
 
-                <h:commandLink id="todosId" action="caixaTodos?faces-redirect=true" immediate="true">
-                    <h:graphicImage library="img" name="list.png"/>
+                <h:commandLink id="pos" action="listaPos?faces-redirect=true" immediate="true">
+                    <h:graphicImage library="img" name="pos.png"/>
                 </h:commandLink>
-                <p:tooltip for="todosId" value="Desativados" position="top"/>
+                <p:tooltip for="pos" value="PoS" position="top"/>
             </h:form>
         </ui:composition>
 
